Tue Feb 02 21:42:42 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: fix compilation when gtksourceview is disabled

Tue Feb 02 13:30:44 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Allow changing variable names.  Either in the GUI
	  or using the new parameter LinePlotVariableNames.

	* help/C/gel-function-list.xml: document the new parameter

Tue Feb 02 10:32:53 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c, help/C/gel-function-list.xml: Add SlopefieldTicks
	  and VectorfieldTicks, to allow setting ticks from the command line.

Wed Jan 27 00:52:13 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.h, src/genius.c, src/gnome-genius.c, src/funclib.c:
	  Implement AskButtons interactive function which asks the user to
	  select from a list of buttons.

	* src/eval.c: allow comparisons (only == and !=) with null.  We
	  really want to treat null as an empty matrix.  null is only
	  equal to null itself of course.

	* src/geniustests.txt: add tests for null comparisons

	* help/C/genius.xml, help/C/gel-function-list.xml: Document
	  AskButtons

Wed Dec 23 15:41:42 2009  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.9

Wed Dec 23 15:18:56 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: fix minor leak

	* src/eval.c: fix MEM_DEBUG_FRIENDLY compilation

Wed Dec 23 14:09:21 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c, src/util.c: fix use of strcpy

Thu Dec 10 17:00:49 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c: fix matrix expansion.  After zeros were replaced
	  the expression [0,I(2);0,0] would not include the last row.  This
	  fixes AuxilliaryUnitMatrix and JordanBlock functions.

	* src/geniustests.txt: add some tests for matrix expansion and the
	  above functions

Tue Nov 10 00:30:53 2009  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.8

Tue Nov 10 00:19:56 2009  Jiri (George) Lebl <jirka@5z.com>

	* configure.in: require gtk/glib 2.12
