@@ -6,6 +6,8 @@ Changes to 1.0.10
 * Allow comparisons (== and !=) with null, treating it as an empty matrix
 * Fix compilation without gtksourceview (thanks to Joe Sapp for pointing this
   out)
+* Fix some crashes in plotting code
+* Allow slopefield solutions to leave plot window by a small fudge factor.
 
 * For some of the changes the author (Jiri) was partially supported by
   NSF grant DMS 0900885 and the University of Illinois at Urbana-Champaign
